Actualización: numero de teléfono

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
   <title>Portafolio  </title>
   <link rel="stylesheet" href="../static/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  
 </head>
 <body>
   <!-- Navegación -->
@@ -211,7 +210,7 @@
         Soy ingeniero de sistemas con formación sólida en el diseño, desarrollo y gestión de soluciones tecnológicas. 
       </p>
       <p>211181@unamba.edu.pe</p>
-      <p>Tel: 988 - 605 - 555</p>
+      <p>Tel: +51 988 - 605 - 555</p>
     </div>
 
     <form class="contact-form">
@@ -235,7 +234,7 @@
 
 </section>
   <footer>
-    <p>© 2025 Luis</p>
+    <p>© 2025 Interaccion Humano Computadora</p>
   </footer>
 </body>
 <script src="../static/script.js"></script>
