--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     <nav class="menu">
       <a href="#inicio" class="active">Inicio</a>
       <a href="#competencias">Competencias</a>
+      <a href="#portafolio">Portafolio</a>
       <a href="#experiencia">Experiencia</a>
-      <!--<a href="#portafolio">Portafolio</a>-->
       <a href="#contacto">Contacto</a>
     </nav>
     <button class="menu-toggle" aria-label="Abrir menú">
@@ -132,20 +132,27 @@
   </div>
 </section>
 
-  <!-- Portafolio 
-  <section class="section light" id="portafolio">
-    <h2 class="competencias-title">PORTAFOLIO</h2>
-    <div class="container">
-      <p>MIS ÚLTIMOS TRABAJOS UX / WEB</p>
-      <a href="ssss" class="btn">Ver más</a>
-      <div class="portfolio-items">
-      <img src="img1.png" alt="Proyecto 1">
-        <img src="img2.png" alt="Proyecto 2">
-        <img src="img3.png" alt="Proyecto 3">
+ <!--Portafolio -->
+ <section class="section light" id="portafolio">
+  <h2 class="competencias-title">PORTAFOLIO</h2>
+  <div class="container">
+    <p>Ultimos trabajos Web</p>
+    <div class="portfolio-items">
+      <div class="portfolio-item">
+        <a href="https://tr4f1c0.onrender.com/" target="_blank">
+          <img src="/static/imagens/VISIOT.png" alt="VisioTrafic">
+        </a>
+        <p class="portfolio-title">VisioTrafic</p>
+      </div>
+      <div class="portfolio-item">
+        <a href="http://agroindustriasmafer.com/" target="_blank">
+          <img src="/static/imagens/MAFER.png" alt="Sitio Web Agroindustrias Mafer">
+        </a>
+        <p class="portfolio-title">Agroindustrias Mafer</p>
       </div>
     </div>
-  </section>-->
-
+  </div>
+</section>
   <!-- Experiencia -->
   <section class="section ex" id="experiencia">
   <h2 class="competencias-title">EXPERIENCIA</h2>
@@ -223,11 +230,11 @@
       <button type="submit">Enviar</button>
     </form>
      <div class="contact-social">
-    <a href="https://x.com/LoayzaNarvaez"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://www.linkedin.com/in/luis-loayza-4b79a6276/"><i class="fab fa-linkedin-in"></i></a>
     <a href="https://x.com/LoayzaNarvaez"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="https://www.instagram.com/joseboi__/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/Untovchable"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://github.com/skyps2003"><i class="fab fa-github"></i></a>
   </div>
   </div>
 
